--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "mongodb":"2.2.22",
+    "express-session":"1.9.1",
+    "connect-mongo":"1.3.2",
+    "connect-flash":"0.1.1"
   }
 }
